--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
   },
   "dependencies": {
     "@next/third-parties": "^14.2.5",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@t3-oss/env-nextjs": "^0.11.0",
+    "@tabler/icons-react": "^3.15.0",
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-query-devtools": "^5.51.23",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "ky": "^1.7.0",
+    "ky": "^1.7.2",
     "next": "^14.2.8",
     "next-auth": "^4.24.7",
     "next-intl": "^3.19.1",
@@ -41,6 +47,7 @@
     "@types/node": "^22.4.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/spotify-api": "^0.0.25",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "@typescript-eslint/parser": "^7.17.0",
     "autoprefixer": "^10.4.20",
