--- a/package.json
+++ b/package.json
@@ -15,12 +15,10 @@
   "dependencies": {
     "@next/third-parties": "^14.2.5",
     "@radix-ui/react-accordion": "^1.2.0",
-    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.1",
     "@t3-oss/env-nextjs": "^0.11.0",
     "@tabler/icons-react": "^3.15.0",
     "@tanstack/react-query": "^5.51.23",
@@ -46,7 +44,6 @@
     "@next/bundle-analyzer": "^14.2.5",
     "@next/eslint-plugin-next": "^14.2.5",
     "@total-typescript/ts-reset": "^0.6.1",
-    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.4.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
