--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "2.1.0",
   "private": true,
   "scripts": {
-    "dev:next": "next dev",
-    "develop": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "next:dev": "next dev",
+    "next:build": "next build",
+    "next:start": "next start",
+    "prisma:studio": "dotenv -e .env.local prisma studio",
+    "prisma:migrate-dev": "dotenv -e .env.local prisma migrate dev",
+    "prisma:migrate-prod": "dotenv -e .env.local prisma migrate deploy",
     "lint": "next lint",
     "build-stats": "cross-env ANALYZE=true npm run build",
     "format": "next lint --fix && prettier '**/*.{json,yaml}' --write --ignore-path .gitignore",
@@ -14,6 +16,7 @@
   },
   "dependencies": {
     "@next/third-parties": "^14.2.5",
+    "@prisma/client": "^5.19.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -31,6 +34,7 @@
     "next-intl": "^3.19.1",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
@@ -53,6 +57,7 @@
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
     "cssnano": "^7.0.5",
+    "dotenv-cli": "^7.4.2",
     "eslint": "^8.57.0",
     "eslint-plugin-format": "^0.1.2",
     "eslint-plugin-jsx-a11y": "^6.9.0",
@@ -62,6 +67,7 @@
     "eslint-plugin-tailwindcss": "^3.17.4",
     "postcss": "^8.4.41",
     "postcss-load-config": "^6.0.1",
+    "prisma": "^5.19.1",
     "sharp": "^0.33.5",
     "tailwindcss": "^3.4.10",
     "tailwindcss-animate": "^1.0.7",
