--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prisma:migrate-dev": "dotenv -e .env.local prisma migrate dev",
     "prisma:migrate-prod": "dotenv -e .env.local prisma migrate deploy",
     "prisma:generate": "dotenv -e .env.local prisma generate",
+    "prisma:push": "dotenv -e .env.local prisma db push",
     "lint": "next lint",
     "build-stats": "cross-env ANALYZE=true npm run build",
     "format": "next lint --fix && prettier '**/*.{json,yaml}' --write --ignore-path .gitignore",
