--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "check-types": "tsc --noEmit --pretty"
   },
   "dependencies": {
-    "@next/third-parties": "^14.2.5",
     "@prisma/client": "^5.19.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -28,6 +27,7 @@
     "@tabler/icons-react": "^3.15.0",
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-query-devtools": "^5.51.23",
+    "@vercel/analytics": "^1.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "ky": "^1.7.2",
